<resources>
    <string name="appName">Questopia-RE</string>
    <string name="extendedName" translatable="false">Questopia-RE -VERSION-</string>
    <string name="nav_home">Home</string>
    <string name="tabZeroName">Games</string>
    <string name="tabOneName">Repository</string>
    <string name="search">Search</string>
    <string name="settingsTitle">Settings</string>
    <string name="gameStockTitle">Games</string>
    <string name="btnAddGame">Add Game</string>
    <string name="deleteGameTitle">Delete Game</string>
    <string name="selectAllTitle">Select All</string>
    <string name="editButton">Edit Game</string>
    <string name="downloadButton">Download Game</string>
    <string name="play">Play</string>
    <string name="close">Close</string>
    <string name="closeGameTitle">Close Game</string>
    <string name="crashReportTitle">Questopia crash report</string>
    <string name="saveProgressSubtitle">Save progress to a slot</string>
    <string name="loadProgressSubtitle">Load a saved game</string>
    <string name="restartSubtitle">Start the game over</string>
    <string name="inputSubtitle">Send command or text input</string>
    <string name="cheatModesSubtitle">Variable editor, locks, teleport and console</string>
    <string name="settingsSubtitle">Appearance, audio and general settings</string>
    <string name="exitGameSubtitle">Close the game and return to games</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Copy to root folder</string>
    <string name="selectColor">Select Color</string>
    <string name="selectFolder">Select folder containing game file</string>
    <string name="selectIcon">Select Icon</string>
    <string name="selectGameFile">Select game file to launch</string>
    <string name="selectPathFile">Select patch file (.qsp format)</string>
    <string name="selectModFile">Select mod file (.qsp format)</string>
    <string name="promptExitApp">Do you want to exit the application?</string>
    <string name="promptCloseGame">Are you sure you want to close the game?</string>
    <string name="promptRestartGame">Are you sure you want to restart the game?</string>
    <string name="deleteConfirmPrompt">Are you sure you want to delete this game?</string>
    <string name="loadGamePopup">The save file was not found in the game directory. Would you like to manually specify the path to the save file?</string>
    <string name="emptyGamesTitle">No installed games yet</string>
    <string name="emptyGamesDesc">Use the \'+\' button or the Game Repository tab to add games</string>
    <string name="emptyInventory">Inventory is empty</string>
    <string name="gameMenuTitle">Game Menu</string>
    <string name="selectActionTitle">Select Option</string>
    <string name="playGameAction">Launch game</string>
    <string name="editGameAction">Edit game information</string>
    <string name="deleteGameAction">Remove game and files</string>
    <string name="searchGamesPlaceholder">Search games…</string>
    <string name="refreshRepositoryPrompt">Pull down or refresh to load games from repository</string>
    <string name="filterHomeAll">All</string>
    <string name="filterFavorites">Favorites</string>
    <string name="statLibrary">Games</string>
    <string name="statSize">Size</string>
    <string name="statFavorites">Favorites</string>
    <string name="sortTitle">Sort</string>
    <string name="sortName">Name</string>
    <string name="sortSize">Size</string>
    <string name="sortDate">Recent</string>
    <string name="channelInstallGame">Unpack game</string>
    <string name="titleNotify">Game Installation</string>
    <string name="titleUnpackDoneNotify">Game unpacked!</string>
    <string name="bodyUnpackDoneNotify">Successfully unpacked the game -GAMENAME-!</string>
    <string name="error">Error</string>
    <string name="errorNoQspFound">No playable QSP game file found in selected folder</string>
    <string name="interFolderError">Error reading internal app directory</string>
    <string name="gamesFolderError">Error reading game folder</string>
    <string name="gameFolderEmpty">Could not find .qsp or .gam file in the game folder!</string>
    <string name="infoFileNotWritable">Error reading game info file</string>
    <string name="infoFileWriteError">Error writing game info to file</string>
    <string name="installError">Cannot copy game folder -GAMENAME-!</string>
    <string name="waitingError">An error occurred while waiting</string>
    <string name="waitingInputError">Could not receive input</string>
    <string name="noGameFilesError">Game files not found after copying!</string>
    <string name="notFoundSound">Sound file not found:</string>
    <string name="notFoundImage">Image file not found:</string>
    <string name="notFoundFile">File not found:</string>
    <string name="notReadFile">Cannot read file:</string>
    <string name="gameName">Name</string>
    <string name="gameAuthor">Author</string>
    <string name="gameVersion">Version</string>
    <string name="calcSizeDir">Calculate folder size</string>
    <string name="author">Author: -AUTHOR-</string>
    <string name="ported_by">Ported by: -PORTED_BY-</string>
    <string name="version">Version: -VERSION-</string>
    <string name="fileSize">Size: -SIZE-</string>
    <string name="fileType">File Type: -TYPE-</string>
    <string name="experimental">(experimental)</string>
    <string name="mod_data">Modified: -MOD_DATA-</string>
    <string name="pub_data">Published: -PUB_DATA-</string>
    <string name="image">Image</string>
    <string name="mainDescTitle">Game</string>
    <string name="mainDescContDesc">Go to main description</string>
    <string name="varsDescTitle">Character</string>
    <string name="varsDescContDesc">Go to additional description</string>
    <string name="inventoryTitle">Inventory</string>
    <string name="inventoryContDesc">Go to inventory</string>
    <string name="userInputTitle">User Input</string>
    <string name="restartGameTitle">Restart Game</string>
    <string name="loadTitle">Load</string>
    <string name="saveTitle">Save</string>
    <string name="selectSlot">Select a slot</string>
    <string name="slotPresent" formatted="false">Slot %d - %s</string>
    <string name="slotEmpty">Slot %d [Empty]</string>
    <string name="loadFrom">From File…</string>
    <string name="saveTo">To File…</string>
    <string name="newsMenuTitle">News Questopia</string>
    <string name="appearanceCatTitle">Appearance &amp; Language</string>
    <string name="appThemeTitle">Theme</string>
    <string name="themeColorTitle">Color Accent</string>
    <string name="themeModeSystem">System Default</string>
    <string name="themeModeLight">Light</string>
    <string name="themeModeDark">Dark</string>
    <string name="themeModeAmoled">AMOLED Black</string>
    <string name="themeColorDynamic">Dynamic</string>
    <string name="themeColorBlue">Blue</string>
    <string name="themeColorGreen">Green</string>
    <string name="themeColorOrange">Orange</string>
    <string name="themeColorPurple">Purple</string>
    <string name="themeColorRed">Red</string>
    <string name="themeColorPink">Pink</string>
    <string name="themeColorTeal">Teal</string>
    <string name="themeColorAmber">Yellow</string>
    <string name="themeColorMonochrome">Monochrome</string>
    <string name="navBarBlurTitle">Navigation Bar Blur</string>
    <string name="navBarBlurSum">Enable frosted glass blur effect on navigation bar</string>
    <string name="versionInfoTitle">Version Information</string>
    <string name="searchSettingsPlaceholder">Search in settings…</string>
    <string name="noSearchResults">No results found for \"%1$s\"</string>
    <string name="generalCatTitle">General</string>
    <string name="langTitle">Language</string>
    <string name="binPrefTitle">Binary Prefixes</string>
    <string name="actsHeightTitle">Actions List Height</string>
    <string name="separatorTitle">Separator Line Visibility</string>
    <string name="separatorSum">Between the list of actions and the main description</string>
    <string name="immersiveModeTitle">Immersive Mode</string>
    <string name="immersiveModeSum">Hide system navigation and status bars</string>
    <string name="autoscrollTitle">Autoscroll</string>
    <string name="autoscrollSum">Scroll down automatically when new text arrives</string>
    <string name="edgeFeedbackTitle">Edge vibration and bounce</string>
    <string name="edgeFeedbackSum">Vibrate and gently bounce when reaching the top or bottom</string>
    <string name="musicDebugSum">Show dialog error if sound path is invalid</string>
    <string name="settingsEffect">Settings will take effect after game description updates</string>
    <string name="addFolder">Select game folder</string>
    <string name="addFolderSum0">Current root dir is internal directory of the application</string>
    <string name="addFolderSum1">Current root dir is external directory of the device</string>
    <string name="textCatTitle">Typography &amp; Text</string>
    <string name="fontStyleTitle">Font Style</string>
    <string name="fontSizeTitle">Font Size</string>
    <string name="useGameFontTitle">Use Game Font</string>
    <string name="useGameFontSum">Use font settings defined by the game</string>
    <string name="useGameTextColorTitle">Text Color</string>
    <string name="useGameTextColorSum">Use text color settings defined by the game</string>
    <string name="textColorTitle">Custom Text Color</string>
    <string name="textColorSum">Custom text color palette</string>
    <string name="useGameBackgroundColorTitle">Background Color</string>
    <string name="useGameBackgroundColorSum">Use background color settings defined by the game</string>
    <string name="backColorTitle">Specify Background Color</string>
    <string name="useGameLinkColorTitle">Link Color</string>
    <string name="useGameLinkColorSum">Use link color settings defined by the game</string>
    <string name="linkColorTitle">Specify Link Color</string>
    <string name="textBackLinkColorSum">Default value: -VALUE-</string>
    <string name="execStringTitle">QSP Command Line</string>
    <string name="execStringSum">Command prompt used for debugging or cheats</string>
    <string name="cheatModesTitle">Cheat Modes</string>
    <string name="cheatModesSummary">Enables variable editor, freeze stats and cheat modes in the in-game menu</string>
    <string name="saveEditorTitle">Save &amp; Variable Editor</string>
    <string name="saveEditorSummary">Inspect and modify live game variables, save or load state</string>
    <string name="lockedVariablesTitle">Locked variables (kept fixed every cycle)</string>
    <string name="noLockedVariables">No locked variables yet. Tap the lock icon in Variables to lock one.</string>
    <string name="lockedValue">Locked value: %1$s</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="variableSearchPlaceholder">Search variable name or value…</string>
    <string name="noVariablesFound">No variables found</string>
    <string name="noMatchingVariables">No matching variables</string>
    <string name="locationSearchPlaceholder">Search scene or location…</string>
    <string name="teleport">Teleport</string>
    <string name="itemNamePlaceholder">Item name (e.g. Golden Key)</string>
    <string name="cheatAdd">Add</string>
    <string name="itemAdded">Item added to inventory</string>
    <string name="inventoryCount">Current inventory (%1$d items)</string>
    <string name="emptyInventoryShort">Inventory is empty</string>
    <string name="quickCheatPresets">Quick cheat presets</string>
    <string name="moneyPreset">+100k money</string>
    <string name="debugOn">Enable debug</string>
    <string name="customQspCommand">Run custom QSP code</string>
</resources>