<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menuGroup_running">
        <item
            android:id="@+id/menu_newGame"
            android:icon="@drawable/baseline_restart_alt_24"
            android:title="@string/restartGameTitle"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_userInput"
            android:icon="@drawable/baseline_tab_input_24"
            android:title="@string/userInputTitle"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_saveGame"
            android:icon="@drawable/baseline_save_24"
            android:orderInCategory="1"
            android:title="@string/saveTitle"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_loadGame"
            android:icon="@drawable/baseline_file_upload_24"
            android:orderInCategory="2"
            android:title="@string/loadTitle"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/menu_options"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="3"
        android:title="@string/settingsTitle"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_gameStock"
        android:orderInCategory="4"
        android:title="@string/gameStockTitle"
        app:showAsAction="never" />

</menu>
